feat(falco): Allow disabling of Falco's HTTP output with Falcosidekick
There are cases when you'd like to deploy both Falco and Falcosidekick using
a single Helm release and not use the default HTTP output configuration for
Falco. The introduction of a flag in the falcosidekick block of Falco's Helm
Chart values allows for disabling HTTP output and using another output such
as program to perform delivery of alerts to Falcosidekick for example.

Signed-off-by: Marc Sensenich <github@marc-sensenich.com>

--- a/falco/templates/configmap.yaml
+++ b/falco/templates/configmap.yaml
@@ -220,8 +220,8 @@ data:
 {{ .Values.falco.programOutput.program | indent 8 }}
 
     http_output:
-      enabled: {{ if .Values.falcosidekick.enabled }}true{{ else }}{{ .Values.falco.httpOutput.enabled }}{{ end }}
-      url: '{{ if .Values.falco.httpOutput.url }}{{ .Values.falco.httpOutput.url }}{{ else }}http://{{ template "falco.fullname" . }}-falcosidekick{{ if .Values.falcosidekick.fullfqdn }}.{{ .Release.Namespace }}.svc.cluster.local{{ end }}:{{ .Values.falcosidekick.listenport | default "2801" }}{{ end }}'
+      enabled: {{ or (and .Values.falcosidekick.enabled (not .Values.falcosidekick.disableHttpOutput)) .Values.falco.httpOutput.enabled }}
+      url: {{ template "falco.httpOutputUrl" . }}
       user_agent: {{ .Values.falco.httpOutput.userAgent }}
 
 
