update falcosidekick chart to use 2.26.0
Signed-off-by: Issif <issif_github@gadz.org>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -57,6 +57,7 @@ data:
   # AlertManager Output
   ALERTMANAGER_HOSTPORT: "{{ .Values.config.alertmanager.hostport | b64enc }}"
   ALERTMANAGER_ENDPOINT: "{{ .Values.config.alertmanager.endpoint | b64enc }}"
+  ALERTMANAGER_EXPIRESAFTER: "{{ .Values.config.alertmanager.expireafter | b64enc }}"
   ALERTMANAGER_MINIMUMPRIORITY: "{{ .Values.config.alertmanager.minimumpriority | b64enc }}"
   ALERTMANAGER_MUTUALTLS: "{{ .Values.config.alertmanager.mutualtls | printf "%t" | b64enc }}"
   ALERTMANAGER_CHECKCERT: "{{ .Values.config.alertmanager.checkcert | printf "%t" | b64enc }}"
@@ -145,9 +146,13 @@ data:
   LOKI_HOSTPORT: "{{ .Values.config.loki.hostport | b64enc }}"
   LOKI_ENDPOINT: "{{ .Values.config.loki.endpoint | b64enc }}"
   LOKI_TENANT: "{{ .Values.config.loki.tenant | b64enc }}"
+  LOKI_EXTRALABELS: "{{ .Values.config.loki.extralabels | b64enc }}"
   LOKI_MINIMUMPRIORITY: "{{ .Values.config.loki.minimumpriority | b64enc }}"
   LOKI_MUTUALTLS: "{{ .Values.config.loki.mutualtls | printf "%t" | b64enc }}"
   LOKI_CHECKCERT: "{{ .Values.config.loki.checkcert | printf "%t" | b64enc }}"
+
+  # Prometheus Output
+  PROMETHEUS_EXTRALABELS: "{{ .Values.config.loki.extralabels | b64enc }}"
 
   # Nats Output
   NATS_HOSTPORT: "{{ .Values.config.nats.hostport | b64enc }}"
