--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 2
 image:
   registry: docker.io
   repository: falcosecurity/falcosidekick
-  tag: 2.25.0
+  tag: 2.26.0
   pullPolicy: IfNotPresent
 
 podSecurityContext:
@@ -85,6 +85,7 @@ config:
     hostport: ""
     endpoint: "/api/v1/alerts"
     minimumpriority: ""
+    expireafter: ""
     mutualtls: false
     checkcert: true
 
@@ -111,9 +112,13 @@ config:
     hostport: ""
     endpoint: "/api/prom/push"
     tenant: ""
+    extralabels: ""
     minimumpriority: ""
     mutualtls: false
     checkcert: true
+
+  prometheus:
+    extralabels: ""
 
   nats:
     hostport: ""
