feat(external-webui-redis): Add the possibility to use an external Redis Database instead of deploying one.
Add the options to use an external database for the webui.
Now the Redis' values have an `enabled` member and the Webui's values have an `externalRedis` member, containing an `enabled`, an `url` and a `port` member.
This new member 'externalRedis.enabled' is mutually exclusive with 'redis.enabled'.

Signed-off-by: Lyonel Martinez <lyonel.martinez@numberly.com>

--- a/falcosidekick/templates/deployment-ui.yaml
+++ b/falcosidekick/templates/deployment-ui.yaml
@@ -1,4 +1,9 @@
 {{- if .Values.webui.enabled }}
+{{- if and .Values.webui.redis.enabled .Values.webui.externalRedis.enabled }}
+  {{ fail "Both webui.redis and webui.externalRedis modules are enabled. Please disable one of them." }}
+{{- else if and (not .Values.webui.redis.enabled) (not .Values.webui.externalRedis.enabled) }}
+  {{ fail "Neither the included Redis nor the external Redis is enabled. Please enable one of them." }}
+{{- end }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -49,7 +54,11 @@ spec:
           imagePullPolicy: {{ .Values.webui.image.pullPolicy }}
           args:
             - "-r"
+            {{- if .Values.webui.redis.enabled }}
             - {{ include "falcosidekick.fullname" . }}-ui-redis{{ if .Values.webui.redis.fullfqdn }}.{{ .Release.Namespace }}.svc.cluster.local{{ end }}:{{ .Values.webui.redis.service.port | default "6379" }}
+            {{- else if .Values.webui.externalRedis.enabled }}
+            - "{{ required "External Redis is enabled. Please set the URL to the database." .Values.webui.externalRedis.url }}:{{ .Values.webui.externalRedis.port | default "6379" }}"
+            {{- end}}
           ports:
             - name: http
               containerPort: 2802
@@ -84,6 +93,7 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- if .Values.webui.redis.enabled }}
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -186,4 +196,5 @@ spec:
         {{- if .Values.webui.redis.storageClass }}
         storageClassName: {{ .Values.webui.redis.storageClass }}
         {{- end }}
+{{- end }}
 {{- end }}
