--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -274,7 +274,7 @@ data:
 
   # Syslog
   SYSLOG_HOST: "{{ .Values.config.syslog.host | b64enc}}"
-  SYSLOG_PORT: "{{ .Values.config.syslog.port | printf "%t" | b64enc}}"
+  SYSLOG_PORT: "{{ .Values.config.syslog.port | b64enc}}"
   SYSLOG_PROTOCOL: "{{ .Values.config.syslog.protocol | b64enc}}"
   SYSLOG_MINIMUMPRIORITY : "{{ .Values.config.syslog.minimumpriority | b64enc}}"
 
