chore(event-generator): fix some linting issues
Signed-off-by: Aldo Lacuku <aldo@lacuku.eu>

--- a/event-generator/values.yaml
+++ b/event-generator/values.yaml
@@ -47,23 +47,22 @@ tolerations: []
 affinity: {}
 
 config:
-  # -- The event-generator accepts two commands (run, test): 
+  # -- The event-generator accepts two commands (run, test):
   # run: runs actions.
   # test: runs and tests actions.
-  # For more info see: https://github.com/falcosecurity/event-generator
+  # For more info see: https://github.com/falcosecurity/event-generator.
   command: test
   # -- Regular expression used to select the actions to be run.
   actions: "^k8saudit"
   # -- Runs in a loop the actions.
   # If set to "true" the event-generator is deployed using a k8s deployment otherwise a k8s job.
   loop: false
-  # -- The length of time to wait before running an action. Non-zero values should contain 
+  # -- The length of time to wait before running an action. Non-zero values should contain
   # a corresponding time unit (e.g. 1s, 2m, 3h). A value of zero means no sleep. (default 100ms)
   sleep: ""
-  
+
   grpc:
     # -- Set it to true if you are deploying in "test" mode.
     enabled: true
     # -- Path to the Falco grpc socket.
     bindAddress: "unix:///var/run/falco/falco.sock"
-  
