--- a/event-generator/Chart.yaml
+++ b/event-generator/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: event-generator
-description: A Helm chart for Kubernetes
+description: A Helm chart used to deploy the event-generator in Kubernetes cluster.
 
 # A chart can be either an 'application' or a 'library' chart.
 #
