feat(falco): Add ability to specify extra env to driver loader initContainer
Signed-off-by: Tsubasa Nagasawa <toversus2357@gmail.com>

--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -192,6 +192,8 @@ driver:
         repository: falcosecurity/falco-driver-loader
         #  -- Overrides the image tag whose default is the chart appVersion.
         tag: ""
+      # -- Extra environment variables that will be pass onto Falco driver loader init container.
+      env: {}
 
 # Collectors for data enrichment (scenario requirement)
 collectors:
