feat(stmp-sasl): Updates values and secrets for STMP SASL integration. feat(alertmanager-extra-fields): Updates values and secrets for AlertManager extra labels and annotations.
In prevision of sidekick version bump.
falcosecurity/falcosidekick#341
falcosecurity/falcosidekick#347

Signed-off-by: Lyonel Martinez <lyonel.martinez@numberly.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -61,6 +61,8 @@ data:
   ALERTMANAGER_MINIMUMPRIORITY: "{{ .Values.config.alertmanager.minimumpriority | b64enc }}"
   ALERTMANAGER_MUTUALTLS: "{{ .Values.config.alertmanager.mutualtls | printf "%t" | b64enc }}"
   ALERTMANAGER_CHECKCERT: "{{ .Values.config.alertmanager.checkcert | printf "%t" | b64enc }}"
+  ALERTMANAGER_EXTRALABELS: "{{ .Values.config.alertmanager.extralabels | b64enc }}"
+  ALERTMANAGER_EXTRAANNOTATIONS: "{{ .Values.config.alertmanager.extraannotations | b64enc }}"
 
   # InfluxDB Output
   INFLUXDB_USER: "{{ .Values.config.influxdb.user | b64enc }}"
@@ -92,9 +94,13 @@ data:
   AWS_KINESIS_MINIMUMPRIORITY: "{{ .Values.config.aws.kinesis.minimumpriority | b64enc }}"
 
   # SMTP Output
+  SMTP_HOSTPORT: "{{ .Values.config.smtp.hostport | b64enc }}"
+  SMTP_AUTHMECHANISM: "{{ .Values.config.smtp.authmechanism | b64enc }}"
   SMTP_USER: "{{ .Values.config.smtp.user | b64enc }}"
   SMTP_PASSWORD: "{{ .Values.config.smtp.password | b64enc }}"
-  SMTP_HOSTPORT: "{{ .Values.config.smtp.hostport | b64enc }}"
+  SMTP_TOKEN: "{{ .Values.config.smtp.token | b64enc }}"
+  SMTP_IDENTITY: "{{ .Values.config.smtp.identity | b64enc }}"
+  SMTP_TRACE: "{{ .Values.config.smtp.trace | b64enc }}"
   SMTP_FROM: "{{ .Values.config.smtp.from | b64enc }}"
   SMTP_TO: "{{ .Values.config.smtp.to | b64enc }}"
   SMTP_OUTPUTFORMAT: "{{ .Values.config.smtp.outputformat | b64enc }}"
