feat(yandex-datastreams): Updates values and secrets for Yandex datastreams
In prevision of sidekick version bump.
falcosecurity/falcosidekick#336

Signed-off-by: Lyonel Martinez <lyonel.martinez@numberly.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -269,6 +269,9 @@ data:
   YANDEX_S3_BUCKET: "{{ .Values.config.yandex.s3.bucket | b64enc}}"
   YANDEX_S3_PREFIX: "{{ .Values.config.yandex.s3.prefix | b64enc}}"
   YANDEX_S3_MINIMUMPRIORITY: "{{ .Values.config.yandex.s3.minimumpriority | b64enc}}"
+  YANDEX_DATASTREAMS_ENDPOINT: "{{ .Values.config.yandex.datastreams.endpoint | b64enc}}"
+  YANDEX_DATASTREAMS_STREAMNAME: "{{ .Values.config.yandex.datastreams.streamname | b64enc}}"
+  YANDEX_DATASTREAMS_MINIMUMPRIORITY: "{{ .Values.config.yandex.datastreams.minimumpriority | b64enc}}"
 
   # KafkaRest Output
   KAFKAREST_ADDRESS: "{{ .Values.config.kafkarest.address | b64enc}}"
