feat(node-red): Updates values and secrets for Node Red
In prevision of sidekick version bump.
falcosecurity/falcosidekick#337

Signed-off-by: Lyonel Martinez <lyonel.martinez@numberly.com>

--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -324,6 +324,14 @@ config:
     # -- check if ssl certificate of the output is valid
     checkcert: true
 
+  nodered:
+    address: "" # Webhook address, if not empty, Webhook output is enabled
+    user: "" # User if Basic Auth is enabled for 'http in' node in Node-RED
+    password: "" # Password if Basic Auth is enabled for 'http in' node in Node-RED
+    customHeaders: "" # Custom headers to add in POST, useful for Authentication | list of comma separated headers to, syntax is "key:value,key:value"
+    minimumpriority: "" # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
+    checkcert: true # check if ssl certificate of the output is valid (default: true)
+
   azure:
     # -- Azure Subscription ID
     subscriptionID: ""
