feat(mqtt): Updates values and secrets for MQTT
In prevision of sidekick version bump.
falcosecurity/falcosidekick#338

Signed-off-by: Lyonel Martinez <lyonel.martinez@numberly.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -43,6 +43,16 @@ data:
   MATTERMOST_MUTUALTLS: "{{ .Values.config.mattermost.mutualtls | printf "%t" | b64enc }}"
   MATTERMOST_CHECKCERT: "{{ .Values.config.mattermost.checkcert | printf "%t" | b64enc }}"
 
+  # MQTT Output
+  MQTT_BROKER: "{{ .Values.config.mqtt.broker | b64enc }}"
+  MQTT_TOPIC: "{{ .Values.config.mqtt.topic | b64enc }}"
+  MQTT_QOS: "{{ .Values.config.mqtt.qos | toString | b64enc }}"
+  MQTT_RETAINED: "{{ .Values.config.mqtt.retained | printf "%t" | b64enc }}"
+  MQTT_USER: "{{ .Values.config.mqtt.user | b64enc }}"
+  MQTT_PASSWORD: "{{ .Values.config.mqtt.password | b64enc }}"
+  MQTT_CHECKCERT: "{{ .Values.config.mqtt.checkcert | printf "%t" | b64enc }}"
+  MQTT_MINIMUMPRIORITY: "{{ .Values.config.mqtt.minimumpriority | b64enc }}"
+
   # Teams Output
   TEAMS_WEBHOOKURL: "{{ .Values.config.teams.webhookurl | b64enc }}"
   TEAMS_OUTPUTFORMAT: "{{ .Values.config.teams.outputformat | b64enc }}"
