new(falco): add ability to enable 'tty' in the falco container
By setting 'tty=true' in the falco container we avoid the delays introduced
by falco having a buffered output by default.

Signed-off-by: Aldo Lacuku <aldo@lacuku.eu>

--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -119,6 +119,10 @@ healthChecks:
     # -- Specifies that the kubelet should perform the check every x seconds.
     periodSeconds: 15
 
+# -- Attach the Falco process to a tty inside the container. Needed to flush Falco logs as soon as they are emitted.
+# Set it to "true" when you need the Falco logs to be immediately displayed.
+tty: false
+
 #########################
 # Scenario requirements #
 #########################
