--- a/falcosidekick/templates/deployment.yaml
+++ b/falcosidekick/templates/deployment.yaml
@@ -78,6 +78,10 @@ spec:
                 name: {{ include "falcosidekick.fullname" . }}
                 {{- end }}
           env:
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
             - name: DEBUG
               value: {{ .Values.config.debug | quote }}
             - name: CUSTOMFIELDS
